<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExpenseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/money"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_attach_money_black_36dp" />

                <EditText
                    android:id="@+id/expense_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9.5"
                    android:hint="@string/hint_value"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:textColor="@color/red"
                    android:textColorHint="@color/red"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/description"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_border_color_black_36dp" />

                <EditText
                    android:id="@+id/expense_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9.5"
                    android:hint="@string/hint_write_description"
                    android:maxLength="25"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/date"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_today_black_36dp" />

                <Button
                    android:id="@+id/date_picker"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9.5"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/date_pattern"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/expense_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/expense_types"
                android:padding="15dp" />

            <Button
                android:id="@+id/save_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
