<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="luankevinferreira.expenses.TypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/description"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_border_color_black_36dp" />

            <EditText
                android:id="@+id/add_expense_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9.5"
                android:hint="@string/hint_write_description"
                android:maxLength="25"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <Button
                android:id="@+id/save_expense_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
